# firecracker-http-client

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml  test.yml
examples/: basic_vm.rs  snapshot.rs  vm_lifecycle.rs
src/: action.rs  balloon.rs  boot.rs  cpu.rs  drive.rs  entropy.rs  error.rs  instance.rs  lib.rs  logger.rs  machine.rs  main.rs  metrics.rs  mmds.rs  models.rs  network.rs  snapshot.rs  validation.rs  version.rs  vm.rs  vsock.rs
src/tests/: client_tests.rs  mod.rs  validation_tests.rs
