[package]
name = "firecracker-client"
version = "0.1.0"
edition = "2021"
description = "A Rust client library for interacting with the Firecracker VMM API"
license = "Apache-2.0"
repository = "https://github.com/yourusername/firecracker-client"
documentation = "https://docs.rs/firecracker-client"
readme = "README.md"
keywords = ["firecracker", "vmm", "virtualization", "aws", "microvm"]
categories = ["api-bindings", "virtualization"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
url = "2.4"
thiserror = "1.0"
regex = "1.9"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
